# argus

./: .gitignore  CLAUDE.md  README.md  linear_interpolation_motor.csv  pyproject.toml
argus/: driver.py
scripts/: face_tracking.py  motor_experiment.py
src/argus/: canbus.py  driver.py  isotp_receiver.py  isotp_sender.py  ui.py
src/argus/ui/: main.py
tests/: driver_test.py  test_canbus_driver.py  test_driver.py  test_serial_driver.py
